--- a/section 2/book.html
+++ b/section 2/book.html
@@ -1,1 +1,12 @@
-hello
+<html>
+    <head>
+        <title>book</title>
+    </head>
+    <body>
+        <h1>THE ADVENTURES OF SHERLOCK HOMES</h1>
+        <br>
+        <h3>by</h3>
+        <br>
+        <h2>SIR ARTHUR CONAN DOYLE</h2>
+    </body>
+</html>
