--- a/section 2/book.html
+++ b/section 2/book.html
@@ -3,10 +3,22 @@
         <title>book</title>
     </head>
     <body>
-        <h1>THE ADVENTURES OF SHERLOCK HOMES</h1>
-        <br>
-        <h3>by</h3>
-        <br>
-        <h2>SIR ARTHUR CONAN DOYLE</h2>
+        <center>
+            <hr size="3" noshade>
+            <h1>THE ADVENTURES OF<br> SHERLOCK HOMES</h1>
+            <br>
+            <h3>by</h3>
+            <br>
+            <h2>SIR ARTHUR CONAN DOYLE</h2>
+            <hr size="3" noshade>
+            
+        </center>
+        <!-- this is heading  -->
+        <h1>This is a level 1 heading created using the h1</h1>
+        <h1>This is a level 1 heading created using the h1</h1>
+        <h1>This is a level 1 heading created using the h1</h1>
+        <h1>This is a level 1 heading created using the h1</h1>
+        <h1>This is a level 1 heading created using the h1</h1>
+        <h1>This is a level 1 heading created using the h1</h1>
     </body>
 </html>
