--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -12,5 +12,16 @@
     <p>I am intermediate web developer. I love to make website and find flows in that website.</p>
     <hr>
     <h2>Books and Teaching</h2>
+    <ul>
+        <li>The compleat react bootcamp</li>
+        <li>The compleat web developer bootcamp</li>
+    </ul>
+    <h2>My hobbies</h2>
+    <ol>
+        <li>Music</li>
+        <li>Karate</li>
+        <li>Trekking</li>
+        <li>Motorcycle</li>
+    </ol>
 </body>
 </html>
