--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -7,6 +7,7 @@
     <title>Rohit Personal Sites</title>
 </head>
 <body>
+    <img src="./my inage.png" alt="Rohit profile pic">
     <h1>Rohit Kumar Samad</h1>
     <p><em>Founder and CTO of <strong>This Website</strong></em></p>
     <p>I am intermediate web developer. I love to make website and find flows in that website.</p>
