--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -9,7 +9,7 @@
 <body>
     <img src="./my inage.png" alt="Rohit profile pic">
     <h1>Rohit Kumar Samad</h1>
-    <p><em>Founder and CTO of <strong>This Website</strong></em></p>
+    <p><em>Founder and CTO of <strong><a href="https://github.com/Rohitsamad/ubiquitous-palm-tree">This Website</a> </strong></em></p>
     <p>I am intermediate web developer. I love to make website and find flows in that website.</p>
     <hr>
     <h2>Books and Teaching</h2>
@@ -17,12 +17,7 @@
         <li>The compleat react bootcamp</li>
         <li>The compleat web developer bootcamp</li>
     </ul>
-    <h2>My hobbies</h2>
-    <ol>
-        <li>Music</li>
-        <li>Karate</li>
-        <li>Trekking</li>
-        <li>Motorcycle</li>
-    </ol>
+    <h2><a href="./myhobbies.html">My hobbies</a></h2>
+    <h2><a href="./contact.html">My Contact details</a></h2>
 </body>
 </html>
