--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -7,7 +7,7 @@
     <title>Rohit Personal Sites</title>
 </head>
 <body>
-    <img src="./my inage.png" alt="Rohit profile pic">
+    <img src="./image/my inage.png" alt="Rohit profile pic">
     <h1>Rohit Kumar Samad</h1>
     <p><em>Founder and CTO of <strong><a href="https://github.com/Rohitsamad/ubiquitous-palm-tree">This Website</a> </strong></em></p>
     <p>I am intermediate web developer. I love to make website and find flows in that website.</p>
@@ -17,6 +17,29 @@
         <li>The compleat react bootcamp</li>
         <li>The compleat web developer bootcamp</li>
     </ul>
+    <h2>Work Experiences</h2>
+    <table>
+        <thead>
+            <tr>
+                <td>Date</td>
+                <td>Work</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2019-2021</td>
+                <td>Video editor at YTV</td>
+            </tr>
+            <tr>
+                <td>2021</td>
+                <td>Traniee at virtual testing foundation</td>
+            </tr>
+            <tr>
+                <td>2021</td>
+                <td>Traniee at Grazitti</td>
+            </tr>
+        </tbody>
+    </table>
     <h2><a href="./myhobbies.html">My hobbies</a></h2>
     <h2><a href="./contact.html">My Contact details</a></h2>
 </body>
