--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -7,10 +7,18 @@
     <title>Rohit Personal Sites</title>
 </head>
 <body>
-    <img src="./image/my inage.png" alt="Rohit profile pic">
-    <h1>Rohit Kumar Samad</h1>
-    <p><em>Founder and CTO of <strong><a href="https://github.com/Rohitsamad/ubiquitous-palm-tree">This Website</a> </strong></em></p>
-    <p>I am intermediate web developer. I love to make website and find flows in that website.</p>
+    <table>
+        <tr>
+            <td>
+                <img src="./image/my inage.png" alt="Rohit profile pic">
+            </td>
+            <td>
+                <h1>Rohit Kumar Samad</h1>
+                <p><em>Founder and CTO of <strong><a href="https://github.com/Rohitsamad/ubiquitous-palm-tree">This Website</a> </strong></em></p>
+                <p>I am intermediate web developer. I love to make website and find flows in that website.</p>
+            </td>
+        </tr>
+    </table>
     <hr>
     <h2>Books and Teaching</h2>
     <ul>
