--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -48,6 +48,41 @@
             </tr>
         </tbody>
     </table>
+    <h3>Skills</h3>
+    <table>
+        <thead>
+            <tr>
+                <td>title</td>
+                <td>stars</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Bootstrap Framework</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>HTML</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>Java </td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>OOP</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>javascript</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>css</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+        </tbody>
+    </table>
     <h2><a href="./myhobbies.html">My hobbies</a></h2>
     <h2><a href="./contact.html">My Contact details</a></h2>
 </body>
