--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -7,7 +7,7 @@
     <title>Rohit Personal Sites</title>
 </head>
 <body>
-    <table>
+    <table cellspacing="10">
         <tr>
             <td>
                 <img src="./image/my inage.png" alt="Rohit profile pic">
@@ -25,8 +25,9 @@
         <li>The compleat react bootcamp</li>
         <li>The compleat web developer bootcamp</li>
     </ul>
+    <hr>
     <h2>Work Experiences</h2>
-    <table>
+    <table cellspacing="10">
         <thead>
             <tr>
                 <td>Date</td>
@@ -48,8 +49,9 @@
             </tr>
         </tbody>
     </table>
+    <hr>
     <h3>Skills</h3>
-    <table>
+    <table cellspacing="10">
         <thead>
             <tr>
                 <td>title</td>
