--- a/HTML-Personal Site/contact.html
+++ b/HTML-Personal Site/contact.html
@@ -11,5 +11,15 @@
     <p>India</p>
     <p>9877495221</p>
     <p>rohitsamad4@gmail.com</p>
+
+    <form action="">
+        <label for="">Enter your name.</label>
+        <input type="text" name="" value="">
+        <input type="color" name="" value="">
+        <br>
+        <label for="">Password</label>
+        <input type="password" name="" value="">
+        <input type="submit" name="" value="save">
+    </form>
 </body>
 </html>
