--- a/HTML-Personal Site/contact.html
+++ b/HTML-Personal Site/contact.html
@@ -11,15 +11,19 @@
     <p>India</p>
     <p>9877495221</p>
     <p>rohitsamad4@gmail.com</p>
-
-    <form action="">
+    <hr>
+    <form action="mailto:rohitsamad4@gmail.com" method="POST" enctype="text/plain">
         <label for="">Enter your name.</label>
-        <input type="text" name="" value="">
-        <input type="color" name="" value="">
+        <input type="text" name="yourname" value="">
         <br>
-        <label for="">Password</label>
-        <input type="password" name="" value="">
-        <input type="submit" name="" value="save">
+        <label for="">Enter your email.</label>
+        <input type="email" name="youremail" id="">
+        <br>
+        <label for="">Enter your message</label>
+        <br>
+        <textarea name="yourmessage" id="" cols="30" rows="10"></textarea>
+        <br>
+        <input type="submit" name="" value="submit">
     </form>
 </body>
 </html>
