--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohit Personal Sites</title>
+    <style>
+        body{
+            background-color: aqua;
+        }
+        hr{
+            border-style: none;
+            border-color: grey;
+            border-top-style: dotted;
+            border-width: 5px;
+            width: 3%;
+        }
+    </style>
 </head>
-<body style="background-color: aqua;">
+<body>
     <table cellspacing="10">
         <tr>
             <td>
