--- a/section 5/css-my site/index.html
+++ b/section 5/css-my site/index.html
@@ -9,9 +9,15 @@
     <title>css</title>
 </head>
 <body>
-    <div>
+    <div class="first">
         <h1>I m Rohit Kumar Samad</h1>
         <p>A cyber security researcher</p>
+    </div>
+    <div class="second">
+
+    </div>
+    <div class="third">
+
     </div>
 </body>
 </html>
