--- a/section 5/css-my site/index.html
+++ b/section 5/css-my site/index.html
@@ -10,8 +10,11 @@
 </head>
 <body>
     <div class="first">
+        <img src="./images/cloud.png" alt="cloud">
         <h1>I m Rohit Kumar Samad</h1>
-        <p>A cyber security researcher</p>
+        <p>A <span>cyber security</span> researcher</p>
+        <img src="./images/cloud.png" alt="cloud">
+        <img src="./images/mountain.png" alt="cloud">
     </div>
     <div class="second">
 
