--- a/section 5/css-my site/index.html
+++ b/section 5/css-my site/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="first">
-        <img src="./images/cloud.png" alt="cloud">
-        <h1>I m Rohit Kumar Samad</h1>
+        <img class="top-cloud" src="./images/cloud.png" alt="cloud">
+        <h1>I m Rohit</h1>
         <p>A <span>cyber security</span> researcher</p>
-        <img src="./images/cloud.png" alt="cloud">
+        <img class="bottom-cloud" src="./images/cloud.png" alt="cloud">
         <img src="./images/mountain.png" alt="cloud">
     </div>
     <div class="second">
