--- a/section 5/css-my site/index.html
+++ b/section 5/css-my site/index.html
@@ -15,7 +15,7 @@
     <div class="first">
         <img class="top-cloud" src="./images/cloud.png" alt="cloud">
         <h1>I m Rohit</h1>
-        <p>A <span>cyber security</span> researcher</p>
+        <h2>A <span>cyber security</span> researcher</h2>
         <img class="bottom-cloud" src="./images/cloud.png" alt="cloud">
         <img src="./images/mountain.png" alt="cloud">
     </div>
