--- a/section 5/css-my site/index.html
+++ b/section 5/css-my site/index.html
@@ -23,7 +23,7 @@
         <div class="profile">
           <img src="./images/angela.png" alt="">
           <h2>Hello.</h2>
-          <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
         </div>
         <hr>
         <div class="skills">
@@ -52,7 +52,7 @@
       <div class="third">
         <a class="footer-link" href="https://www.linkedin.com/in/rohit1010/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/RohitKumarSam10">Twitter</a>
-        <p>© 2021 Rohit Samad.</p>
+        <p class="copyright">© 2021 Rohit Samad.</p>
       </div>
       
 </body>
