--- a/TinDog-Start-master/index.html
+++ b/TinDog-Start-master/index.html
@@ -71,15 +71,23 @@
 
   <section id="features">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
-
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
-
+    <div class="row">
+      <div class="features-box col-lg-4 ">
+        <i class="fas fa-check-circle ficon"></i>
+        <h3 class="features-heading">Easy to use.</h3>
+        <p class="features-paragraph">So easy to use, even your dog could do it.</p>
+      </div>
+      <div class="features-box col-lg-4 ">
+        <i class="fas fa-bullseye ficon"></i>
+        <h3 class="features-heading">Elite Clientele</h3>
+        <p class="features-paragraph">We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="features-box col-lg-4 ">
+        <i class="fas fa-heart ficon"></i>
+        <h3 class="features-heading">Guaranteed to work.</h3>
+        <p class="features-paragraph">Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
   </section>
 
 
