--- a/TinDog-Start-master/index.html
+++ b/TinDog-Start-master/index.html
@@ -74,18 +74,18 @@
     <div class="row">
       <div class="features-box col-lg-4 ">
         <i class="fas fa-check-circle ficon"></i>
-        <h3 class="features-heading">Easy to use.</h3>
-        <p class="features-paragraph">So easy to use, even your dog could do it.</p>
+        <h3 >Easy to use.</h3>
+        <p >So easy to use, even your dog could do it.</p>
       </div>
       <div class="features-box col-lg-4 ">
         <i class="fas fa-bullseye ficon"></i>
-        <h3 class="features-heading">Elite Clientele</h3>
-        <p class="features-paragraph">We have all the dogs, the greatest dogs.</p>
+        <h3 >Elite Clientele</h3>
+        <p >We have all the dogs, the greatest dogs.</p>
       </div>
       <div class="features-box col-lg-4 ">
         <i class="fas fa-heart ficon"></i>
-        <h3 class="features-heading">Guaranteed to work.</h3>
-        <p class="features-paragraph">Find the love of your dog's life or your money back.</p>
+        <h3 >Guaranteed to work.</h3>
+        <p >Find the love of your dog's life or your money back.</p>
       </div>
     </div>
   </section>
@@ -96,7 +96,7 @@
   <section id="testimonials">
 
     <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
+    <img class="testmonial-image" src="images/dog-img.jpg" alt="dog-profile">
     <em>Pebbles, New York</em>
 
     <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
@@ -109,10 +109,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
