--- a/TinDog-Start-master/index.html
+++ b/TinDog-Start-master/index.html
@@ -52,7 +52,7 @@
   
       <div class="row">
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class=" btn btn-dark btn-lg download-button"><i class="fab fa-apple"> Download</i></button>
           <button type="button" class=" btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"> Download</i></button>
         </div>
@@ -70,22 +70,23 @@
   <!-- Features -->
 
   <section id="features">
-
-    <div class="row">
-      <div class="features-box col-lg-4 ">
-        <i class="fas fa-check-circle ficon"></i>
-        <h3 >Easy to use.</h3>
-        <p >So easy to use, even your dog could do it.</p>
-      </div>
-      <div class="features-box col-lg-4 ">
-        <i class="fas fa-bullseye ficon"></i>
-        <h3 >Elite Clientele</h3>
-        <p >We have all the dogs, the greatest dogs.</p>
-      </div>
-      <div class="features-box col-lg-4 ">
-        <i class="fas fa-heart ficon"></i>
-        <h3 >Guaranteed to work.</h3>
-        <p >Find the love of your dog's life or your money back.</p>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="features-box col-lg-4 ">
+          <i class="fas fa-check-circle ficon"></i>
+          <h3 class="featute-title" >Easy to use.</h3>
+          <p >So easy to use, even your dog could do it.</p>
+        </div>
+        <div class="features-box col-lg-4 ">
+          <i class="fas fa-bullseye ficon"></i>
+          <h3 class="featute-title">Elite Clientele</h3>
+          <p >We have all the dogs, the greatest dogs.</p>
+        </div>
+        <div class="features-box col-lg-4 ">
+          <i class="fas fa-heart ficon"></i>
+          <h3 class="featute-title">Guaranteed to work.</h3>
+          <p >Find the love of your dog's life or your money back.</p>
+        </div>
       </div>
     </div>
   </section>
@@ -96,12 +97,12 @@
   <section id="testimonials">
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+        <div class="carousel-item active container-fluid">
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testmonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em> 
@@ -134,7 +135,7 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row">
@@ -144,7 +145,7 @@
             <h3>Chihuahua</h3>
           </div>
           <div class="card-body">
-            <h2>Free</h2>
+            <h2 class="price-heading">Free</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
@@ -159,7 +160,7 @@
             <h3>Labrador</h3>
           </div>
           <div class="card-body">
-            <h2>$49 / mo</h2>
+            <h2 class="price-heading">$49 / mo</h2>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
@@ -174,7 +175,7 @@
             <h3>Mastiff</h3>
           </div>
           <div class="card-body">
-            <h2>$99 / mo</h2>
+            <h2 class="price-heading">$99 / mo</h2>
             <p>Pirority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
@@ -194,13 +195,13 @@
   <!-- Call to Action -->
 
   <section id="cta">
-
-    <div class="cta-content">
-
+    <div class="container-fluid">
+      <div class="cta-content">
+        <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+        <button type="button" class=" btn btn-dark btn-lg download-button"><i class="fab fa-apple"> Download</i></button>
+        <button type="button" class=" btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"> Download</i></button>
+      </div>
     </div>
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class=" btn btn-dark btn-lg download-button"><i class="fab fa-apple"> Download</i></button>
-    <button type="button" class=" btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"> Download</i></button>
 
   </section>
 
@@ -208,13 +209,13 @@
   <!-- Footer -->
 
   <footer id="footer">
-
-    <i class="fab fa-twitter footer-icon"></i>
-    <i class="fab fa-facebook-f footer-icon"></i>
-    <i class="fab fa-instagram footer-icon"></i>
-    <i class="fas fa-envelope footer-icon"></i>
-    <p>© Copyright 2018 TinDog</p>
-
+    <div class="container-fluid">
+      <i class="fab fa-twitter footer-icon"></i>
+      <i class="fab fa-facebook-f footer-icon"></i>
+      <i class="fab fa-instagram footer-icon"></i>
+      <i class="fas fa-envelope footer-icon"></i>
+      <p>© Copyright 2018 TinDog</p>
+    </div>
   </footer>
 
 
