--- a/TinDog-Start-master/index.html
+++ b/TinDog-Start-master/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="color-section" id="title">
 
     <div class="container-fluid">
       <!-- Nav Bar -->
@@ -69,7 +69,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
     <div class="container-fluid">
       <div class="row">
         <div class="features-box col-lg-4 ">
@@ -94,7 +94,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="color-section" id="testimonials">
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
@@ -133,7 +133,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -194,7 +194,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="color-section" id="cta">
     <div class="container-fluid">
       <div class="cta-content">
         <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
@@ -208,7 +208,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <div class="container-fluid">
       <i class="fab fa-twitter footer-icon"></i>
       <i class="fab fa-facebook-f footer-icon"></i>
