--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>calculator</h1>
-    <form action="index.html" method="post">
+    <form action="/" method="post">
         <input type="text" name="num1" placeholder="First number" id="">
         <input type="text" name="num2" placeholder="second number" id="">
         <button type="submit" name="submit"> calculator</button>
